--- a/app/src/main/res/layout/app.xml
+++ b/app/src/main/res/layout/app.xml
@@ -9,10 +9,7 @@
         android:id="@+id/cardLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_margin="16dp"
         android:background="?attr/selectableItemBackground"
         android:elevation="2dp"
         app:cardBackgroundColor="@android:color/holo_green_light">
@@ -23,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:padding="18dp">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -32,11 +29,11 @@
 
                 <ImageView
                     android:id="@+id/icon"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="12dp"
+                    android:layout_margin="18dp"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_report_black_24dp"
                     android:tint="?android:attr/colorForegroundInverse" />
@@ -47,27 +44,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="4dp">
+                android:padding="6dp">
 
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="6dp"
                     android:layout_weight="1"
                     android:text="About this project"
                     android:textAppearance="@android:style/TextAppearance.Material.Title"
-                    android:textColor="?android:attr/textColorPrimaryInverse" />
+                    android:textColor="?android:attr/textColorPrimaryInverse"
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="6dp"
                     android:layout_weight="1"
                     android:text="Find out more about the students and technology behind this project"
                     android:textAppearance="@android:style/TextAppearance.Material.Body1"
-                    android:textColor="?android:attr/textColorPrimaryInverse" />
+                    android:textColor="?android:attr/textColorPrimaryInverse"
+                    android:textSize="21sp" />
 
             </LinearLayout>
 
